--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Tools.jar}
+    ${reference.Tools.jar}:\
+    ${reference.Tools-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,6 +62,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.Tools=../../../Desktop/ToolsDAW-master/ToolsDAW-master
+project.Tools-1=../../../../Desktop/ToolsDAW-master/ToolsDAW-master
+reference.Tools-1.jar=${project.Tools-1}/dist/Tools.jar
 reference.Tools.jar=${project.Tools}/dist/Tools.jar
 run.classpath=\
     ${javac.classpath}:\
